Make few UI fixes and overflow ish in Profile.

--- a/teach-me-ui/src/styles/_responsive.scss
+++ b/teach-me-ui/src/styles/_responsive.scss
@@ -402,7 +402,7 @@
   html,
   body,
   #root {
-    font-size: 0.95rem;
+    font-size: 0.925rem;
   }
 
   .shift {
