--- a/teach-me-ui/src/styles/crumbs/_Nav.scss
+++ b/teach-me-ui/src/styles/crumbs/_Nav.scss
@@ -87,7 +87,12 @@ $btn-size: 3em;
 
       width: $size;
       height: $size;
+      background-color: $theme-primary-v4;
     }
+  }
+
+  &.new-notification {
+    opacity: 1;
   }
 
   &:hover,
